# ecs_samples

./: pushDockerImageToECR.sh
cv2_boto3/: Dockerfile
cv2_boto3/ec2/: config.ini  run_task.py  stop_task.py
cv2_boto3/script/: run_test.sh
cv2_boto3/script/python/: pull_data_from_s3.py  push_data_to_s3.py
cv2_boto3/src/: CMakeLists.txt  main.cpp
